# Data.Dawg

./: Dawg.cabal  Dawg.hs
Trie/: Anagrammer.cabal  Anagrammer.hs  TODO  mapanagrammer.hs
