Name:              Anagrammer
Version:           0.1
Synopsis:          Library for fast anagramming using tries
License:           BSD3
Author:            John O'Laughlin
Maintainer:        olaughlin@gmail.com
Stability:         Experimental
Category:          Data
Build-type:        Simple
Cabal-version:     >=1.2
Executable anagrammer
  Main-is: Anagrammer.hs
  Build-depends: base < 5, base >= 4,
                 containers >= 0.3.0.0,
                 bytestring >= 0.9.1.5,
                 array >= 0.3.0.0,
                 binary >= 0.5.0.2
